@@ -11,8 +11,8 @@
    Written by Moritz Bunkus <moritz@bunkus.org>.
 */
 
-#ifndef __MTX_COMMON_UNIQUE_NUMBERS_H
-#define __MTX_COMMON_UNIQUE_NUMBERS_H
+#ifndef MTX_COMMON_UNIQUE_NUMBERS_H
+#define MTX_COMMON_UNIQUE_NUMBERS_H
 
 #include "common/common_pch.h"
 
@@ -24,10 +24,10 @@ enum unique_id_category_e {
   UNIQUE_ATTACHMENT_IDS = 3
 };
 
-void clear_list_of_unique_uint32(unique_id_category_e category);
-bool is_unique_uint32(uint32_t number, unique_id_category_e category);
-void add_unique_uint32(uint32_t number, unique_id_category_e category);
-void remove_unique_uint32(uint32_t number, unique_id_category_e category);
-uint32_t create_unique_uint32(unique_id_category_e category);
+void clear_list_of_unique_numbers(unique_id_category_e category);
+bool is_unique_number(uint64_t number, unique_id_category_e category);
+void add_unique_number(uint64_t number, unique_id_category_e category);
+void remove_unique_number(uint64_t number, unique_id_category_e category);
+uint64_t create_unique_number(unique_id_category_e category);
 
-#endif  // __MTX_COMMON_UNIQUE_NUMBERS_H
+#endif  // MTX_COMMON_UNIQUE_NUMBERS_H
